--- a/MHI1001H Website/Views.html
+++ b/MHI1001H Website/Views.html
@@ -32,6 +32,17 @@
       </div>
     </section>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-72BCZNSCDG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-72BCZNSCDG');
+</script>
+
   <script src="js/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
