--- a/MHI1001H Website/about.html
+++ b/MHI1001H Website/about.html
@@ -23,7 +23,16 @@
     <h1>About me?</h1>
   I'm Sayna<br/>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/WA4iX5D9Z64?si=0rpA-sR3n3wrkBcZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/R0DtBVpufU0?si=yQ7k2I0FR91vgK9v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-72BCZNSCDG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-72BCZNSCDG');
+  </script>
   </body>
 </html>
