--- a/MHI1001H Website/lightbox2-2.11.4/examples/index.html
+++ b/MHI1001H Website/lightbox2-2.11.4/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lightbox Example</title>
-  <link rel="stylesheet" href="../dist/css/lightbox.min.css">
+  <link rel="stylesheet" href="css/lightbox.min.css">
 </head>
 <body>
 
@@ -31,13 +31,24 @@
     </p>
   </section>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-72BCZNSCDG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-72BCZNSCDG');
+</script>
+
   <script src="../dist/js/lightbox-plus-jquery.min.js"></script>
 
   <!-- <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../src/js/lightbox.js"></script> -->
-  
 
-  
+
+
 
 </body>
 </html>
